@@ -149,6 +149,7 @@ DECLARE Sub SetSliceParent(byval sl as slice ptr, byval parent as slice ptr)
 DECLARE Sub ReplaceSliceType(byval sl as slice ptr, byref newsl as slice ptr)
 DECLARE Sub InsertSiblingSlice(byval sl as slice ptr, byval newsl as slice ptr)
 DECLARE Sub SwapSiblingSlices(byval sl1 as slice ptr, byval sl2 as slice ptr)
+DECLARE Function LastChild(byval parent as slice ptr) as slice ptr
 DECLARE Function verifySliceLineage(byval sl as slice ptr, parent as slice ptr) as integer
 DECLARE FUNCTION SliceTypeName OVERLOAD (sl AS Slice Ptr) AS STRING
 DECLARE FUNCTION SliceTypeName OVERLOAD (t AS SliceTypes) AS STRING
